--- a/Pipfile
+++ b/Pipfile
@@ -12,9 +12,11 @@ pytest = '>=5.4.3'
 ipykernel='*'
 pandas = '*'
 matplotlib = '*' 
+numpy = '1.19.5'
 statsmodels = '*'
 tensorflow = '==2.3.1'
 tensorflow-probability = '0.11.1' 
+scikit-learn='0.24.1'
 xlrd = '*'
 
 [requires]
